correct overflow in card description

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -516,7 +516,7 @@ footer {
     align-content: center;
     margin: 4px auto;
     gap: 16px;
-    width: 98%;
+    width: 95%;
 
     @include tablet {
         flex-flow: row wrap;
@@ -556,7 +556,7 @@ footer {
     }
 
     .card-image {
-        height: 240px;
+        height: 160px;
         width: 100%;
         overflow: hidden;
         border: .5px solid $yellow030;
@@ -571,15 +571,10 @@ footer {
 
     .card-bottom {
         width: 100%;
-        display: flex;
-        flex-flow: column nowrap;
-        align-items: flex-start;
-        justify-content: stretch;
-
         .card-details {
             overflow-wrap: break-word;
             width: 100%;
-            height: auto;
+            min-height: 60px;
             margin: 8px 0;
         }
 
@@ -596,9 +591,6 @@ footer {
         animation: appear linear;
         animation-timeline: view();
         animation-range: entry 0;
-
-
-
 
         .card-top {
             height: 80px;
@@ -621,13 +613,13 @@ footer {
         }
 
         .card-image {
-            height: 200px;
+            height: 240px;
             width: 100%;
             flex-grow: 1;
         }
 
         .card-bottom {
-            height: 100px;
+            
             display: flex;
             flex-flow: column nowrap;
             align-items: center;
